src/objects/CCF_LegalTriggerResponse__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCF_Request__c</fullName>
        <label>CCF Request</label>
        <referenceTo>CCF_Request_Header__c</referenceTo>
        <relationshipLabel>CCF LegalTriggerResponses</relationshipLabel>
        <relationshipName>CCF_LegalTriggerResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>CCF_LegalTriggerQuestion__c</referenceTo>
        <relationshipLabel>CCF LegalTriggerResponses</relationshipLabel>
        <relationshipName>CCF_LegalTriggerResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CCF LegalTriggerResponse</label>
    <nameField>
        <displayFormat>Resp-{000000}</displayFormat>
        <label>CCF LegalTriggerResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCF LegalTriggerResponses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>